<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sportivity</groupId>
	<artifactId>sportivity</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>war</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
		<hibernate.core.version>4.1.5.Final</hibernate.core.version>
		<seam.version>3.1.0.Final</seam.version>
		<freemarker.version>2.3.19</freemarker.version>
		<surefire.plugin.version>2.12</surefire.plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.myfaces.core</groupId>
			<artifactId>myfaces-api</artifactId>
			<version>2.1.8</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.myfaces.core</groupId>
			<artifactId>myfaces-impl</artifactId>
			<version>2.1.8</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<artifactId>commons-collections</artifactId>
					<groupId>commons-collections</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.openejb</groupId>
			<artifactId>javaee-api</artifactId>
			<version>6.0-4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-infinispan</artifactId>
			<version>${hibernate.core.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<artifactId>
						jboss-transaction-api_1.1_spec
					</artifactId>
					<groupId>org.jboss.spec.javax.transaction</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>4.2.0.Final</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>jboss-logging</artifactId>
					<groupId>org.jboss.logging</groupId>
				</exclusion>
				<exclusion>
					<artifactId>validation-api</artifactId>
					<groupId>javax.validation</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-search</artifactId>
			<version>4.1.1.Final</version>
			<exclusions>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.solr</groupId>
					<artifactId>solr-analysis-extras</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>jboss-logging</artifactId>
					<groupId>org.jboss.logging</groupId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate.common</groupId>
					<artifactId>hibernate-commons-annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.core.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.hibernate.javax.persistence</groupId>
					<artifactId>hibernate-jpa-2.0-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.jboss.spec.javax.transaction</groupId>
					<artifactId>jboss-transaction-api_1.1_spec</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>jboss-logging</artifactId>
					<groupId>org.jboss.logging</groupId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate.common</groupId>
					<artifactId>hibernate-commons-annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>org.jadira.usertype</groupId>
			<artifactId>usertype.jodatime</artifactId>
			<version>2.0</version>
		</dependency>

		<!-- Seam stuff -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email</artifactId>
			<version>1.2</version>
			<!-- <scope>provided</scope> -->
		</dependency>
		<dependency>
			<groupId>org.jboss.seam.security</groupId>
			<artifactId>seam-security</artifactId>
			<scope>compile</scope>
			<version>${seam.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.solder</groupId>
			<artifactId>solder-impl</artifactId>
			<version>${seam.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.seam.persistence</groupId>
			<artifactId>seam-persistence</artifactId>
			<version>${seam.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>jboss-servlet-api_3.0_spec</artifactId>
					<groupId>org.jboss.spec.javax.servlet</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.seam.international</groupId>
			<artifactId>seam-international</artifactId>
			<version>${seam.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.seam.faces</groupId>
			<artifactId>seam-faces</artifactId>
			<version>${seam.version}</version>
		</dependency>
		<dependency>
			<groupId>org.scribe</groupId>
			<artifactId>scribe</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.ocpsoft</groupId>
			<artifactId>prettyfaces-jsf2</artifactId>
			<scope>runtime</scope>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>3.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces.themes</groupId>
			<artifactId>ui-lightness</artifactId>
			<version>1.0.2</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.mortennobel</groupId>
			<artifactId>java-image-scaling</artifactId>
			<version>0.8.5</version>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>${freemarker.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.logmanager</groupId>
			<artifactId>jboss-logmanager</artifactId>
			<version>1.2.2.GA</version>
			<scope>provided</scope> <!-- replace with logback -->
		</dependency>
		<!-- Test dependencies -->
		<dependency>
			<groupId>org.subethamail</groupId>
			<artifactId>subethasmtp</artifactId>
			<version>3.1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<version>1.0.2.Final</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
			<version>2.0.0-alpha-1</version>
			<scope>test</scope>
			<!-- <version>1.0.0-beta-5</version> -->
			<exclusions>
				<!-- <exclusion> -->
				<!-- <groupId>com.google.collections</groupId> -->
				<!-- <artifactId>google-collections</artifactId> -->
				<!-- </exclusion> -->
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>shrinkwrap-api</artifactId>
					<groupId>org.jboss.shrinkwrap</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Drools only for required dependency from RuleBasedPermissionResolver in seam security, mock package org.drools in src -->
		<!-- <dependency> -->
		<!-- <groupId>org.drools</groupId> -->
		<!-- <artifactId>drools-compiler</artifactId> -->
		<!-- <version>5.1.1</version> -->
		<!-- <exclusions> -->
		<!-- <exclusion> -->
		<!-- <artifactId>mvel2</artifactId> -->
		<!-- <groupId>org.mvel</groupId> -->
		<!-- </exclusion> -->
		<!-- <exclusion> -->
		<!-- <artifactId>antlr-runtime</artifactId> -->
		<!-- <groupId>org.antlr</groupId> -->
		<!-- </exclusion> -->
		<!-- <exclusion> -->
		<!-- <artifactId>ecj</artifactId> -->
		<!-- <groupId>org.eclipse.jdt.core.compiler</groupId> -->
		<!-- </exclusion> -->
		<!-- </exclusions> -->
		<!-- </dependency> -->

		<!-- PDF Excel Library -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>ROOT</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
					<debug>true</debug>
					<showWarnings>true</showWarnings>
					<optimize>true</optimize>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<useProjectReferences>true</useProjectReferences>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<!-- <filesets> -->
					<!-- <fileset> -->
					<!-- <directory>${war.deploy.path}</directory> -->
					<!-- </fileset> -->
					<!-- <fileset> -->
					<!-- <directory>${JBOSS_HOME}/bin/sportivityindexes</directory> -->
					<!-- </fileset> -->
					<!-- </filesets> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.openejb.maven</groupId>
				<artifactId>tomee-maven-plugin</artifactId>
				<version>1.0.0-SNAPSHOT</version> <!-- 1.0.0-SNAPSHOT for snapshot -->
				<!-- <executions> -->
				<!-- <execution> -->
				<!-- <id>start</id> -->
				<!-- <phase>pre-integration-test</phase> -->
				<!-- <goals> -->
				<!-- <goal>start</goal> -->
				<!-- </goals> -->
				<!-- </execution> -->
				<!-- <execution> -->
				<!-- <id>stop</id> -->
				<!-- <phase>post-integration-test</phase> -->
				<!-- <goals> -->
				<!-- <goal>stop</goal> -->
				<!-- </goals> -->
				<!-- </execution> -->
				<!-- </executions> -->
				<configuration>
					<tomeeVersion>1.1.0-SNAPSHOT</tomeeVersion> <!-- 1.0.0 -->
					<removeDefaultWebapps>true</removeDefaultWebapps>
					<skipCurrentProject>true</skipCurrentProject>
					<args>-Xms512m -Xmx512m -XX:MaxPermSize=256m -XX:+UseParallelGC</args>
					<tomeeHttpPort>8080</tomeeHttpPort>
					<tomeeShutdownPort>5678</tomeeShutdownPort>
					<libs>
						<lib>org.hibernate:hibernate-entitymanager:${hibernate.core.version}</lib>
						<lib>org.hibernate:hibernate-core:${hibernate.core.version}</lib>
						<lib>org.jboss.logging:jboss-logging:3.1.0.GA</lib>
						<lib>antlr:antlr:2.7.7</lib>
						<lib>dom4j:dom4j:1.6.1</lib>
						<!-- <lib>org.javassist:javassist:3.15.0-GA</lib> -->
						<lib>org.hibernate.common:hibernate-commons-annotations:4.0.1.Final</lib>
						<lib>org.hibernate:hibernate-validator:4.2.0.Final</lib>
						<lib>postgresql:postgresql:9.1-901.jdbc4</lib>
						<!-- <lib>com.h2database:h2:1.3.168</lib> -->
						<lib>org.infinispan:infinispan-core:5.1.5.FINAL</lib>
						<lib>org.hibernate:hibernate-infinispan:${hibernate.core.version}</lib>
						<lib>org.jgroups:jgroups:3.0.9.Final</lib>
						<lib>org.jboss.marshalling:jboss-marshalling-river:1.3.11.GA:</lib>
						<lib>org.jboss.marshalling:jboss-marshalling:1.3.11.GA</lib>
						<lib>org.codehaus.woodstox:woodstox-core-asl:4.1.1</lib>
						<lib>org.codehaus.woodstox:stax2-api:3.1.1</lib>
						<lib>org.rhq.helpers:rhq-pluginAnnotations:3.0.4</lib>
						<lib>org.jboss.logmanager:jboss-logmanager:1.2.2.GA</lib>
						<!-- <lib>commons-fileupload:commons-fileupload:1.2.2</lib> -->
						<!-- <lib>org.apache.commons:commons-email:1.2</lib> -->

						<lib>remove:openjpa</lib>
						<lib>remove:asm</lib>
						<lib>remove:bval</lib>
						<lib>remove:serp</lib>
						<lib>remove:commons-lang-2.6.jar</lib>
						<lib>remove:commons-dbcp</lib>
						<lib>remove:commons-pool</lib>
						<lib>remove:tomcat-i18n</lib>
					</libs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.0.1</version>
				<executions>
					<execution>
						<id>sportivity-build-req</id>
						<inherited>true</inherited>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>1.6.0</version>
								</requireJavaVersion>
								<requireMavenVersion>
									<version>[3.0.0,)</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>2.0</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.1.1</version>
						<configuration>
							<!-- <webappDirectory>${war.deploy.path}</webappDirectory> -->
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${surefire.plugin.version}</version>
						<configuration>
							<skip>true</skip>
						</configuration>
						<!-- <executions> -->
						<!-- <execution> -->
						<!-- <id>surefire-it</id> -->
						<!-- <phase>integration-test</phase> -->
						<!-- <goals> -->
						<!-- <goal>test</goal> -->
						<!-- </goals> -->
						<!-- <configuration> -->
						<!-- <skip>false</skip> -->
						<!-- </configuration> -->
						<!-- </execution> -->
						<!-- </executions> -->
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>tomee</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${surefire.plugin.version}</version>
						<configuration>
							<systemPropertyVariables>
							</systemPropertyVariables>
							<skip>false</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.apache.openejb</groupId>
					<artifactId>arquillian-tomee-remote</artifactId>
					<version>1.1.0-SNAPSHOT</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>as7ui</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.1.1</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.10</version>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.10</version>
						<configuration>
							<groups>uitest</groups>
							<systemPropertyVariables>
								<JBOSS_HOME>${env.JBOSS_HOME}</JBOSS_HOME>
							</systemPropertyVariables>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.jboss.as</groupId>
					<artifactId>jboss-as-arquillian-container-managed</artifactId>
					<version>${jboss.version}</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>jboss-public-repository</id>
			<name>JBoss Repository</name>
			<url>https://repository.jboss.org/nexus/content/groups/public</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>sonatype-oss-public</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>apache-maven-snapshots</id>
			<url>https://repository.apache.org/content/groups/public</url>
		</repository>
		<repository>
			<id>java.net</id>
			<url>http://download.java.net/maven/1</url>
		</repository>
		<repository>
			<id>prime-repo</id>
			<name>PrimeFaces Maven Repository</name>
			<url>http://repository.primefaces.org</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>apache-maven-snapshots-plugins</id>
			<url>https://repository.apache.org/content/groups/snapshots</url>
		</pluginRepository>
	</pluginRepositories>
</project>